registry service repository layer big update + validation dto
