# fstickbackend/registry-service/src/main/java/ru/fstick/registry_service/dto/api/request/commit/CommitPluginRequest.java
@@ -1,6 +1,7 @@
 package ru.fstick.registry_service.dto.api.request.commit;
 
-import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 
 import java.util.List;
@@ -8,5 +9,8 @@ import java.util.UUID;
 
 @Data
 public class CommitPluginRequest {
+    @NotNull
+    private UUID versionId;
+    @NotEmpty
     private List<String> keys;
 }
