# fstickbackend/registry-service/src/main/java/ru/fstick/registry_service/dto/api/request/commit/CommitScreenshotsRequest.java
@@ -1,11 +1,14 @@
 package ru.fstick.registry_service.dto.api.request.commit;
 
 
+import jakarta.validation.constraints.NotEmpty;
 import lombok.Data;
 
 import java.util.List;
 
 @Data
-public class CommitAssetsRequest {
+public class CommitScreenshotsRequest {
+    @NotEmpty
     private List<String> keys;
 }
+
