# fstickbackend/registry-service/src/main/java/ru/fstick/registry_service/dto/api/response/AddPluginResponse.java
@@ -11,6 +11,7 @@ import java.util.UUID;
 @Builder
 public class AddPluginResponse {
     private UUID pluginId;
+    private UUID versionId;
     private List<FileUploadData> uploads;
     private FileUploadData iconUpload;
 }
